fix: z-index -es of pop-up and 'session controller'

--- a/src/windows/input-colors/assets/scss/input-colors.scss
+++ b/src/windows/input-colors/assets/scss/input-colors.scss
@@ -1,6 +1,12 @@
 $line-height: 3rem;
 $form-max-width: 40rem;
 
+$input-color-layer: 1;
+$input-color-disabler-layer: 2;
+$popup-window-layer: 100;
+$popup-layer: 101;
+$session-controller-layer: 1000;
+
 .input-colors {
   width: 100%;
   height: 100vh;
@@ -73,6 +79,7 @@ $form-max-width: 40rem;
 
     height: $line-height;
     position: relative;
+    z-index: $input-color-layer;
 
     margin-bottom: 20px;
 
@@ -86,7 +93,7 @@ $form-max-width: 40rem;
     background-color: rgba(black, 0.2);
 
     position: absolute;
-    z-index: 2;
+    z-index: $input-color-disabler-layer;
   }
 
   &__color-line-item {
@@ -181,7 +188,7 @@ $form-max-width: 40rem;
     bottom: 0;
     left: 0;
 
-    z-index: 3;
+    z-index: $popup-window-layer;
   }
   
   &__popup {
@@ -198,7 +205,7 @@ $form-max-width: 40rem;
 
     position: fixed;
     bottom: 0;
-    z-index: 10;
+    z-index: $popup-layer;
   }
   
   &__inner {
@@ -217,7 +224,7 @@ $form-max-width: 40rem;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 11;
+  z-index: $session-controller-layer;
 
   margin-top: 20px;
 
@@ -249,7 +256,7 @@ $form-max-width: 40rem;
     position: absolute;
     top: -1rem;
     right: -1rem;
-    z-index: 5;
+    z-index: calc($session-controller-layer + 1);
   }
 }
 
@@ -262,7 +269,7 @@ $form-max-width: 40rem;
     bottom: 0;
     left: 0;
 
-    z-index: 3;
+    z-index: $popup-window-layer;
   }
 
   &__popup {
@@ -270,7 +277,7 @@ $form-max-width: 40rem;
     height: 100vh;
 
     position: relative;
-    z-index: 10;
+    z-index: $popup-layer;
 
     background-color: white;
     color: black;
